--- a/react-rps/src/header.css
+++ b/react-rps/src/header.css
@@ -10,7 +10,6 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 15%); 
-    z-index: 0;
 }
 
 .App-logo {
