--- a/react-rps/src/results.css
+++ b/react-rps/src/results.css
@@ -1,6 +1,7 @@
 
 .Results {
     position: relative;
+    top: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
